hphp/hack/test/typecheck/reactive/rx_if_implements23.php.exp
File "rx_if_implements23.php", line 14, characters 19-31:
Member condshallowrx has the wrong type (Typing[4341])
File "rx_if_implements23.php", line 8, characters 28-40:
This function is conditionally shallow reactive (condition type: \Rx1).
File "rx_if_implements23.php", line 14, characters 19-31:
This function is conditionally shallow reactive (condition type: \Rx2).
